[project]
name = "media-toolbox"
version = "0.1.0"
description = "A versatile media processing API for images, videos, and audio files."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "faster-whisper==1.1.1",
    "ffmpeg-python==0.2.0",
    "numpy==2.2.6",
    "pillow==11.3.0",
    "pillow-heif==1.0.0",
    "pysubs2==1.8.0",
    "python-multipart==0.0.20",
    "uvicorn>=0.35.0",
    "websockets==15.0.1",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "colorama==0.4.6",
    "filelock==3.16.1",
    "fsspec==2024.10.0",
    "idna==3.10",
    "Jinja2==3.1.4",
    "llvmlite==0.44.0",
    "MarkupSafe==3.0.2",
    "more-itertools==10.5.0",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numba==0.61.2",
    "regex==2024.9.11",
    "requests==2.32.3",
    "setuptools==75.2.0",
    "sympy==1.13.1",
    "tiktoken==0.8.0",
    "torch==2.5.0",
    "tqdm==4.66.5",
    "typing_extensions==4.12.2",
    "urllib3==2.2.3",
    "openai-whisper",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
]

[tool.uv.sources]
openai-whisper = { git = "https://github.com/SpyGuy0215/whisper.git" }
